--- a/assets/scss/select.scss
+++ b/assets/scss/select.scss
@@ -6,6 +6,7 @@
 
   select {
     cursor: pointer;
+    font-size: 16px;
     min-height: 100%;
     opacity: 0;
     position: absolute;
